# PaperNarrator

./: .env.example  .gitignore  HF_README.md  LICENSE  LLM.md  README.md  app.py  colab.json  config.py  download_ffmpeg.bat  download_ffmpeg.sh  download_vibevoice.py  pyproject.toml  setup.bat  setup.sh  setup_vibevoice.bat  setup_vibevoice.sh
docs/plans/: 2026-04-28-papernarrator-implementation.md
docs/superpowers/specs/: 2026-04-27-papernarrator-design.md
examples/: html_examples.txt
langgraph_pipeline/: __init__.py  ep3_builder.py  skills.py  state.py  tools.py  workflow.py
llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
observability/: __init__.py  tracer.py
scripts/: install.bat  install.sh  installer.py
tests/: test_chunking.py  test_config.py  test_docker.py  test_e2e_pdfs.py  test_ep3_builder.py  test_gradio_app.py  test_installer.py  test_integration.py  test_langfuse_sessions.py  test_langfuse_tracer.py  test_llm_providers.py  test_packaging_ep3.py  test_pdf_extraction.py  test_sentence_splitting.py  test_state.py  test_text_processing.py  test_tts_integration.py  test_workflow_nodes.py
tts/: vibevoice.py
