[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-narrator"
version = "0.1.0"
description = "Convert scientific papers to narrated EP3 audiobooks with AI-powered text cleaning and visual descriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.44.0",
    "langgraph>=0.2.56",
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "accelerate>=0.33.0",
    "pymupdf>=1.24.0",
    "pydub>=0.25.1",
    "ebooklib>=0.18",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.37.0",
    "ollama>=0.3.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "vibevoice @ git+https://github.com/microsoft/VibeVoice.git",
    "av>=12.0.0",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
    "langfuse>=2.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-forked>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
include = ["langgraph_pipeline", "llm", "tts", "config", "tests*"]
